# sqz

./: .gitignore  AUTHORS  Cargo.toml  LICENSE  Plot flat hierarchy.py  README.md  convert_to_z.sh  notes.md
scripts/: README.md  compress-gfa-sequitur.sh  count-path-length.py  coverage.py
src/: aho_corasick.rs  color_set.rs  compressing.rs  compressor.rs  decoding.rs  encoding.rs  grammar_building.rs  helpers.rs  main.rs  node_id.rs  parser.rs  path_segment.rs  printing.rs  priority.rs
src/helpers/: digram_occurrences.rs  utils.rs
