[package]
name = "sqz"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
flate2 = "1.1.0"
indexmap = "2.8.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4.26"
once_cell = "1.21.1"
priority-queue = "2.3.1"
regex = "1.11.1"
