[package]
name = "sqz"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick = "1.1.4"
anyhow = "1.0.99"
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
flate2 = "1.1.0"
indexmap = "2.8.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4.26"
once_cell = "1.21.1"
priority-queue = "2.3.1"
rand = "0.9.2"
regex = "1.11.1"
deepsize = "0.2.0"

[profile.release]
codegen-units = 1
lto = "fat"
